# GlassBox

./: .gitignore  README.md  generate_samples.py  install.py  main.py  pyproject.toml
.streamlit/: config.toml
data/: iris.csv  titanic_mini.csv
installation/: benchmark_hardware.py
src/glassbox/: config.py
src/glassbox/core/: data_manager.py  model_factory.py  trainer.py
src/glassbox/ui/: components.py  layout.py  styles.py  visuals.py
src/glassbox/utils/: session.py  threading.py
