[project]
name = "glassbox"
version = "0.1.0"
description = "Plateforme éducative pour réseaux de neurones"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas",
  "scikit-learn",
  "streamlit",
  "plotly",
  "sympy==1.13.1",
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "graphviz>=0.21",
]
